NetBSD Problem Report #55460

From www@netbsd.org  Sun Jul  5 18:29:55 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 45DAD1A9213
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  5 Jul 2020 18:29:55 +0000 (UTC)
Message-Id: <20200705182954.777121A9218@mollari.NetBSD.org>
Date: Sun,  5 Jul 2020 18:29:54 +0000 (UTC)
From: jnaman806@gmail.com
Reply-To: jnaman806@gmail.com
To: gnats-bugs@NetBSD.org
Subject: copy error in libcurses
X-Send-Pr-Version: www-1.0

>Number:         55460
>Category:       lib
>Synopsis:       copy error in libcurses
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jul 05 18:30:00 +0000 2020
>Closed-Date:    Tue Jul 07 13:18:36 +0000 2020
>Last-Modified:  Tue Jul 07 13:18:36 +0000 2020
>Originator:     Naman Jain
>Release:        NetBSD 9.0
>Organization:
IIT Kanpur
>Environment:
NetBSD localhost 9.0 NetBSD 9.0 (GENERIC) #0: Fri Feb 14 00:06:28 UTC 2020  mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/amd64/compile/GENERIC amd64
>Description:
Small copy mistake in family of *ins* functions namely in mvwinsstr,
mvwinsnstr, mvwins_wstr, mvwins_nwstr, mvwinsch, mvwins_wch.

>How-To-Repeat:

>Fix:
Change stdscr -> win

>Release-Note:

>Audit-Trail:
From: "Valeriy E. Ushakov" <uwe@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55460 CVS commit: src/lib/libcurses
Date: Mon, 6 Jul 2020 22:46:50 +0000

 Module Name:	src
 Committed By:	uwe
 Date:		Mon Jul  6 22:46:50 UTC 2020

 Modified Files:
 	src/lib/libcurses: ins_wch.c ins_wstr.c insch.c insstr.c

 Log Message:
 mvwins*(WINDOW *win, ...) functions - call wins* on win, not stdscr.
 From Naman Jain in PR lib/55460.


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.15 src/lib/libcurses/ins_wch.c \
     src/lib/libcurses/ins_wstr.c
 cvs rdiff -u -r1.25 -r1.26 src/lib/libcurses/insch.c
 cvs rdiff -u -r1.7 -r1.8 src/lib/libcurses/insstr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: uwe@NetBSD.org
State-Changed-When: Mon, 06 Jul 2020 23:40:54 +0000
State-Changed-Why:
Pullups requested for -8 and -9.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55460 CVS commit: [netbsd-9] src/lib/libcurses
Date: Tue, 7 Jul 2020 12:43:51 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Jul  7 12:43:51 UTC 2020

 Modified Files:
 	src/lib/libcurses [netbsd-9]: ins_wch.c ins_wstr.c insch.c insstr.c

 Log Message:
 Pull up following revision(s) (requested by uwe in ticket #986):

 	lib/libcurses/insch.c: revision 1.26
 	lib/libcurses/ins_wch.c: revision 1.15
 	lib/libcurses/ins_wstr.c: revision 1.15
 	lib/libcurses/insstr.c: revision 1.8

 mvwins*(WINDOW *win, ...) functions - call wins* on win, not stdscr.
 From Naman Jain in PR lib/55460.


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.14.2.1 src/lib/libcurses/ins_wch.c \
     src/lib/libcurses/ins_wstr.c
 cvs rdiff -u -r1.25 -r1.25.2.1 src/lib/libcurses/insch.c
 cvs rdiff -u -r1.7 -r1.7.2.1 src/lib/libcurses/insstr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55460 CVS commit: [netbsd-8] src/lib/libcurses
Date: Tue, 7 Jul 2020 12:48:42 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Jul  7 12:48:42 UTC 2020

 Modified Files:
 	src/lib/libcurses [netbsd-8]: ins_wch.c ins_wstr.c insch.c insstr.c

 Log Message:
 Pull up following revision(s) (requested by uwe in ticket #1567):

 	lib/libcurses/insch.c: revision 1.26
 	lib/libcurses/ins_wch.c: revision 1.15
 	lib/libcurses/ins_wstr.c: revision 1.15
 	lib/libcurses/insstr.c: revision 1.8

 mvwins*(WINDOW *win, ...) functions - call wins* on win, not stdscr.
 From Naman Jain in PR lib/55460.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.11.4.1 src/lib/libcurses/ins_wch.c \
     src/lib/libcurses/ins_wstr.c
 cvs rdiff -u -r1.23 -r1.23.6.1 src/lib/libcurses/insch.c
 cvs rdiff -u -r1.5 -r1.5.6.1 src/lib/libcurses/insstr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: uwe@NetBSD.org
State-Changed-When: Tue, 07 Jul 2020 13:18:36 +0000
State-Changed-Why:
Pull ups to all active branches done.
Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.