mvwins*(WINDOW *win, ...) functions - call wins* on win, not stdscr. From Naman Jain in PR lib/55460.