libcurses/ins_wstr.c
@@ -1,4 +1,4 @@
-/*   $NetBSD: ins_wstr.c,v 1.14 2019/06/09 07:40:14 blymn Exp $ */
+/*   $NetBSD: ins_wstr.c,v 1.15 2020/07/06 22:46:50 uwe Exp $ */
 
 /*
  * Copyright (c) 2005 The NetBSD Foundation Inc.
@@ -94,7 +94,7 @@ mvwins_wstr(WINDOW *win, int y, int x, const wchar_t *wstr)
 	if (wmove(win, y, x) == ERR)
 		return ERR;
 
-	return wins_wstr(stdscr, wstr);
+	return wins_wstr(win, wstr);
 }
 
 /*
@@ -107,7 +107,7 @@ mvwins_nwstr(WINDOW *win, int y, int x, const wchar_t *wstr, int n)
 	if (wmove(win, y, x) == ERR)
 		return ERR;
 
-	return wins_nwstr(stdscr, wstr, n);
+	return wins_nwstr(win, wstr, n);
 }
 
 
